update: fix sidebar border when collapsed

--- a/frontend/src/app/components/common/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/common/sidebar/sidebar.component.scss
@@ -15,30 +15,13 @@ mat-sidenav {
   border-right: 1px solid var(--sys-outline);
   padding-top: 1rem;
   display: flex;
+
+  &.collapsed {
+    border-right: none;
+  }
 }
 
-// .sidenav-header {
-//   padding-bottom: 1.5rem;
-//   text-align: center;
 
-//   img {
-//     border-radius: 100%;
-//     object-fit: cover;
-//   }
-
-//   .sidenav-header-text {
-//     margin: 1rem;
-
-//     h2 {
-//       font-size: 1.5rem;
-//       margin: 0;
-//     }
-
-//     p {
-//       font-size: 0.75rem;
-//     }
-//   }
-// }
 
 .lastUpdate-container {
   display: flex;
@@ -49,16 +32,17 @@ mat-sidenav {
   text-align: center;
 }
 
-.lastUpdate-vertical {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-top: 8rem;
-  transform: rotate(180deg);
-  writing-mode: vertical-lr;
-  width: 100%;
-}
+// .lastUpdate-vertical {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+//   align-items: center;
+//   margin-top: 8rem;
+//   transform: rotate(180deg);
+//   writing-mode: vertical-lr;
+//   width: 100%;
+// }
+
 
 
 
@@ -91,3 +75,29 @@ mat-sidenav-content {
     height: calc(100vh - var(--header-height-mobile));
   }
 }
+
+
+
+
+// .sidenav-header {
+//   padding-bottom: 1.5rem;
+//   text-align: center;
+
+//   img {
+//     border-radius: 100%;
+//     object-fit: cover;
+//   }
+
+//   .sidenav-header-text {
+//     margin: 1rem;
+
+//     h2 {
+//       font-size: 1.5rem;
+//       margin: 0;
+//     }
+
+//     p {
+//       font-size: 0.75rem;
+//     }
+//   }
+// }
